--- a/src/pages/litlog/sites/site-1/changes/requests/request-2/2018-06-30T1352.md
+++ b/src/pages/litlog/sites/site-1/changes/requests/request-2/2018-06-30T1352.md
@@ -12,5 +12,5 @@ added spec
 +---
 +## Specification
 +
-+Create a <litlog-link to="/files/components/litlog-code.js.file">litlog-code</litlog-link> React component that link to items in the <litlog-link to="/">litlog</litlog-link> system.
++Create a <litlog-link to="/files/components/litlog-code.js">litlog-code</litlog-link> React component that link to items in the <litlog-link to="/">litlog</litlog-link> system.
 ```
