--- a/src/pages/litlog/sites/site-1/changes/tasks/task-1/2018-06-26T1233.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-1/2018-06-26T1233.md
@@ -8,7 +8,7 @@ added plan step-6
  git add .
  git commit -m "added task-1 plan step-5"
  ```
-+1. Follow [part-seven](https://www.gatsbyjs.org/tutorial/part-seven/) of the [Gatsby.js Tutorial] so <litlog-link to="/">litlog</litlog-link> pages can be viewed. First create <litlog-link to="/files/gatsby-node.js.file">gatsby-node.js</litlog-link> `gatsby-node.js` except use `/litlog${slug}` for the `value` of `createNodeField` and `litlog-page.js` instead of `blog-post.js`. Then create <litlog-link to="/files/src/templates/litlog-page.js.file">litlog-page.js</litlog-link> and use `LitlogPageQuery` instead of `BlogPostQuery`. Modify <litlog-link to="/files/src/pages/litlog/index.js.file">the litlog index page</litlog-link> to add `import Link from "gatsby-link";`, replace *fileAbsolutePath* with *link*, `{node.fileAbsolutePath}` with `<Link to={node.fields.slug}>{node.fields.slug}</Link>`, and change the graphql to add the slug.
++1. Follow [part-seven](https://www.gatsbyjs.org/tutorial/part-seven/) of the [Gatsby.js Tutorial] so <litlog-link to="/">litlog</litlog-link> pages can be viewed. First create <litlog-link to="/files/gatsby-node.js">gatsby-node.js</litlog-link> `gatsby-node.js` except use `/litlog${slug}` for the `value` of `createNodeField` and `litlog-page.js` instead of `blog-post.js`. Then create <litlog-link to="/files/src/templates/litlog-page.js">litlog-page.js</litlog-link> and use `LitlogPageQuery` instead of `BlogPostQuery`. Modify <litlog-link to="/files/src/pages/litlog/index.js">the litlog index page</litlog-link> to add `import Link from "gatsby-link";`, replace *fileAbsolutePath* with *link*, `{node.fileAbsolutePath}` with `<Link to={node.fields.slug}>{node.fields.slug}</Link>`, and change the graphql to add the slug.
 +```bash
 +litlog updating tasks/task-1
 +litlog updating files/gatsby-node.js
