--- a/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2000.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2000.md
@@ -32,7 +32,7 @@ added plan step-1
 +>+---
 +>+## Specification
 +>+
-+>+Create a <litlog-link to="/files/components/litlog-code.js.file">litlog-code</litlog-link> React component that link to items in the <litlog-link to="/">litlog</litlog-link> system.
++>+Create a <litlog-link to="/files/components/litlog-code.js">litlog-code</litlog-link> React component that link to items in the <litlog-link to="/">litlog</litlog-link> system.
 +EOF
 +rm __blank
 +litlog created requests/request-2 "added spec"
