--- a/src/pages/litlog/sites/site-1/changes/tasks/task-1/2018-06-30T2020.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-1/2018-06-30T2020.md
@@ -4,30 +4,30 @@ status: "updated"
 ---
 added plan step-8
 ```diff
-@@ -521,3 +521,25 @@ litlog updated tasks/task-1 "added plan step-7"
- git add .
- git commit -m "added task-1 plan step-7"
- ```
-+1. Update siteMetadata.title
-+```bash
-+litlog updating tasks/task-1
-+litlog updating files/gatsby-config.js
-+# update siteMetadata.title
-+git apply << EOF
-+>--- a/sites/site-1/files/gatsby-config.js
-+>+++ b/sites/site-1/files/gatsby-config.js
-+>@@ -1,6 +1,6 @@
-+> module.exports = {
-+>   siteMetadata: {
-+>-    title: 'Gatsby Default Starter',
-+>+    title: 'Gatsby Litlog Starter',
-+>   },
-+>   plugins: [
-+>     'gatsby-plugin-react-helmet',
-+EOF
-+litlog updated files/gatsby-config.js "updated siteMetadata.title"
-+litlog updated tasks/task-1 "added plan step-8"
-+git add .
-+git commit -m "added task-1 plan step-8"
-+```
+>@@ -521,3 +521,25 @@ litlog updated tasks/task-1 "added plan step-7"
+> git add .
+> git commit -m "added task-1 plan step-7"
+> ```
+>+1. Update siteMetadata.title
+>+```bash
+>+litlog updating tasks/task-1
+>+litlog updating files/gatsby-config.js
+>+# update siteMetadata.title
+>+git apply << EOF
+>+>--- a/sites/site-1/files/gatsby-config.js
+>+>+++ b/sites/site-1/files/gatsby-config.js
+>+>@@ -1,6 +1,6 @@
+>+> module.exports = {
+>+>   siteMetadata: {
+>+>-    title: 'Gatsby Default Starter',
+>+>+    title: 'Gatsby Litlog Starter',
+>+>   },
+>+>   plugins: [
+>+>     'gatsby-plugin-react-helmet',
+>+EOF
+>+litlog updated files/gatsby-config.js "updated siteMetadata.title"
+>+litlog updated tasks/task-1 "added plan step-8"
+>+git add .
+>+git commit -m "added task-1 plan step-8"
+>+```
 ```
