--- a/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2105.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2105.md
@@ -4,111 +4,111 @@ status: "updated"
 ---
 added plan step-2
 ```diff
-@@ -54,3 +54,106 @@ litlog created tasks/task-2 "added plan step-1"
- git add .
- git commit -m "added task-2 plan step-1"
- ```
-+1. Follow [custom-components](https://using-remark.gatsbyjs.org/custom-components/) to set up using custom components in markdown and check out <litlog-link>this link</litlog-link> when done.
-+```bash
-+export LITLOG_SITE=site-1
-+litlog updating tasks/task-2
-+```
-+   1. Install *rehype-react* as a dependency
-+```bash
-+npm install --save rehype-react
-+git apply << EOF
-+>--- a/sites/site-1/files/package.json
-+>+++ b/sites/site-1/files/package.json
-+>@@ -11,7 +11,8 @@
-+>     "gatsby-source-filesystem": "^1.5.39",
-+>     "gatsby-transformer-remark": "^1.7.44",
-+>     "prismjs": "^1.15.0",
-+>-    "react-helmet": "^5.2.0"
-+>+    "react-helmet": "^5.2.0",
-+>+    "rehype-react": "^3.0.2"
-+>   },
-+>   "keywords": [
-+>     "gatsby"
-+EOF
-+litlog updated files/package.json "ran 'npm install --save rehype-react' following [custom-components](https://using-remark.gatsbyjs.org/custom-components/)"
-+litlog updating files/src/templates/litlog-page.js
-+```   
-+   1. Import *rehype-react* and <litlog-link to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link> to <litlog-link to="/files/src/templates/litlog-page.js">litlog-page.js</litlog-link>
-+```javascript
-+import rehypeReact from "rehype-react";
-+import LitlogLink from "../components/litlog-link";
-+```
-+   1. Create a render function with references to <litlog-link to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link>
-+```javascript
-+  const renderAst = new rehypeReact({
-+    createElement: React.createElement,
-+    components: { 
-+      "litlog-link": LitlogLink
-+    },
-+  }).Compiler;
-+```
-+   1. Render the content using htmlAst instead of html by changing
-+```javascript
-+<div dangerouslySetInnerHTML={{ __html: post.html }} />
-+```
-+to
-+```javascript
-+{
-+  renderAst(post.htmlAst)
-+}
-+```
-+   1. Change html to htmlAst in *LitlogPageQuery*
-+```javascript
-+  query LitlogPageQuery($slug: String!) {
-+    markdownRemark(fields: { slug: { eq: $slug } }) {
-+      htmlAst
-+      frontmatter {
-+        title
-+      }
-+    }
-+  }
-+```
-+Don't forget to document
-+```bash
-+git apply << EOF
-+>--- a/src/templates/litlog-page.js
-+>+++ b/src/templates/litlog-page.js
-+>@@ -1,11 +1,21 @@
-+> import React from "react";
-+>+import rehypeReact from "rehype-react";
-+>+import LitlogLink from "../components/litlog-link";
-+> 
-+> export default ({ data }) => {
-+>   const post = data.markdownRemark;
-+>+  const renderAst = new rehypeReact({
-+>+    createElement: React.createElement,
-+>+    components: { 
-+>+      "litlog-link": LitlogLink
-+>+    },
-+>+  }).Compiler;
-+>   return (
-+>     <div>
-+>       <h1>{post.frontmatter.title}</h1>
-+>-      <div dangerouslySetInnerHTML={{ __html: post.html }} />
-+>+      {
-+>+        renderAst(post.htmlAst)
-+>+      }
-+>     </div>
-+>   );
-+> };
-+>@@ -13,7 +23,7 @@ export default ({ data }) => {
-+> export const query = graphql`
-+>   query LitlogPageQuery($slug: String!) {
-+>     markdownRemark(fields: { slug: { eq: $slug } }) {
-+>-      html
-+>+      htmlAst
-+>       frontmatter {
-+>         title
-+>       }
-+EOF
-+litlog updated files/src/templates/litlog-page.js "followed [custom-components](https://using-remark.gatsbyjs.org/custom-components/) to set up using custom components in markdown"
-+litlog updated tasks/task-2 "added plan step-2"
-+git add .
-+git commit -m "added task-2 plan step-2"
-+```
+>@@ -54,3 +54,106 @@ litlog created tasks/task-2 "added plan step-1"
+> git add .
+> git commit -m "added task-2 plan step-1"
+> ```
+>+1. Follow [custom-components](https://using-remark.gatsbyjs.org/custom-components/) to >set up using custom components in markdown and check out <litlog-link>this >link</litlog-link> when done.
+>+```bash
+>+export LITLOG_SITE=site-1
+>+litlog updating tasks/task-2
+>+```
+>+   1. Install *rehype-react* as a dependency
+>+```bash
+>+npm install --save rehype-react
+>+git apply << EOF
+>+>--- a/sites/site-1/files/package.json
+>+>+++ b/sites/site-1/files/package.json
+>+>@@ -11,7 +11,8 @@
+>+>     "gatsby-source-filesystem": "^1.5.39",
+>+>     "gatsby-transformer-remark": "^1.7.44",
+>+>     "prismjs": "^1.15.0",
+>+>-    "react-helmet": "^5.2.0"
+>+>+    "react-helmet": "^5.2.0",
+>+>+    "rehype-react": "^3.0.2"
+>+>   },
+>+>   "keywords": [
+>+>     "gatsby"
+>+EOF
+>+litlog updated files/package.json "ran 'npm install --save rehype-react' following >[custom-components](https://using-remark.gatsbyjs.org/custom-components/)"
+>+litlog updating files/src/templates/litlog-page.js
+>+```   
+>+   1. Import *rehype-react* and <litlog-link >to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link> to <litlog-link >to="/files/src/templates/litlog-page.js">litlog-page.js</litlog-link>
+>+```javascript
+>+import rehypeReact from "rehype-react";
+>+import LitlogLink from "../components/litlog-link";
+>+```
+>+   1. Create a render function with references to <litlog-link >to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link>
+>+```javascript
+>+  const renderAst = new rehypeReact({
+>+    createElement: React.createElement,
+>+    components: { 
+>+      "litlog-link": LitlogLink
+>+    },
+>+  }).Compiler;
+>+```
+>+   1. Render the content using htmlAst instead of html by changing
+>+```javascript
+>+<div dangerouslySetInnerHTML={{ __html: post.html }} />
+>+```
+>+to
+>+```javascript
+>+{
+>+  renderAst(post.htmlAst)
+>+}
+>+```
+>+   1. Change html to htmlAst in *LitlogPageQuery*
+>+```javascript
+>+  query LitlogPageQuery($slug: String!) {
+>+    markdownRemark(fields: { slug: { eq: $slug } }) {
+>+      htmlAst
+>+      frontmatter {
+>+        title
+>+      }
+>+    }
+>+  }
+>+```
+>+Don't forget to document
+>+```bash
+>+git apply << EOF
+>+>--- a/src/templates/litlog-page.js
+>+>+++ b/src/templates/litlog-page.js
+>+>@@ -1,11 +1,21 @@
+>+> import React from "react";
+>+>+import rehypeReact from "rehype-react";
+>+>+import LitlogLink from "../components/litlog-link";
+>+> 
+>+> export default ({ data }) => {
+>+>   const post = data.markdownRemark;
+>+>+  const renderAst = new rehypeReact({
+>+>+    createElement: React.createElement,
+>+>+    components: { 
+>+>+      "litlog-link": LitlogLink
+>+>+    },
+>+>+  }).Compiler;
+>+>   return (
+>+>     <div>
+>+>       <h1>{post.frontmatter.title}</h1>
+>+>-      <div dangerouslySetInnerHTML={{ __html: post.html }} />
+>+>+      {
+>+>+        renderAst(post.htmlAst)
+>+>+      }
+>+>     </div>
+>+>   );
+>+> };
+>+>@@ -13,7 +23,7 @@ export default ({ data }) => {
+>+> export const query = graphql`
+>+>   query LitlogPageQuery($slug: String!) {
+>+>     markdownRemark(fields: { slug: { eq: $slug } }) {
+>+>-      html
+>+>+      htmlAst
+>+>       frontmatter {
+>+>         title
+>+>       }
+>+EOF
+>+litlog updated files/src/templates/litlog-page.js "followed [custom-components]>(https://using-remark.gatsbyjs.org/custom-components/) to set up using custom components >in markdown"
+>+litlog updated tasks/task-2 "added plan step-2"
+>+git add .
+>+git commit -m "added task-2 plan step-2"
+>+```
 ```
