--- a/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2213.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2213.md
@@ -4,40 +4,40 @@ status: "updated"
 ---
 plan step-4
 ```diff
-@@ -233,3 +233,35 @@ litlog updated tasks/task-2 "added step-3"
- git add .
- git commit -m "added task-2 plan step-3"
- ```
-+1. Make <litlog-link to="/files/src/components/litlog/litlog-link.js">litlog-link.js</litlog-link> slightly smarter by adding a prefix.
-+```javascript
-+  const goto = `/litlog${to}`;
-+  return (
-+    <Link to={goto}>
-+      {children}
-+    </Link>
-+```
-+```bash
-+litlog updating tasks/task-2
-+litlog updating files/src/components/litlog-link.js
-+# update as above
-+git apply << EOF
-+>--- a/src/components/litlog-link.js
-+>+++ b/src/components/litlog-link.js
-+>@@ -2,8 +2,9 @@ import React from 'react'
-+> import Link from 'gatsby-link'
-+> 
-+> const LitlogLink = ({ to, children }) => {
-+>+  const goto = `/litlog${to}`;
-+>   return (
-+>-    <Link to={to}>
-+>+    <Link to={goto}>
-+>       {children}
-+>     </Link>
-+> )}
-+EOF
-+litlog updated files/src/components/litlog-link.js "made slightly smarter by adding a prefix"
-+litlog updated tasks/task-2 "plan step-4"
-+git add .
-+git commit -m "added task-2 plan step-4"
-+```
+>@@ -233,3 +233,35 @@ litlog updated tasks/task-2 "added step-3"
+> git add .
+> git commit -m "added task-2 plan step-3"
+> ```
+>+1. Make <litlog-link >to="/files/src/components/litlog/litlog-link.js">litlog-link.js</litlog-link> slightly >smarter by adding a prefix.
+>+```javascript
+>+  const goto = `/litlog${to}`;
+>+  return (
+>+    <Link to={goto}>
+>+      {children}
+>+    </Link>
+>+```
+>+```bash
+>+litlog updating tasks/task-2
+>+litlog updating files/src/components/litlog-link.js
+>+# update as above
+>+git apply << EOF
+>+>--- a/src/components/litlog-link.js
+>+>+++ b/src/components/litlog-link.js
+>+>@@ -2,8 +2,9 @@ import React from 'react'
+>+> import Link from 'gatsby-link'
+>+> 
+>+> const LitlogLink = ({ to, children }) => {
+>+>+  const goto = `/litlog${to}`;
+>+>   return (
+>+>-    <Link to={to}>
+>+>+    <Link to={goto}>
+>+>       {children}
+>+>     </Link>
+>+> )}
+>+EOF
+>+litlog updated files/src/components/litlog-link.js "made slightly smarter by adding a >prefix"
+>+litlog updated tasks/task-2 "plan step-4"
+>+git add .
+>+git commit -m "added task-2 plan step-4"
+>+```
 ```
