--- a/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2207.md
+++ b/src/pages/litlog/sites/site-1/changes/tasks/task-2/2018-06-30T2207.md
@@ -4,84 +4,84 @@ status: "updated"
 ---
 added step-3
 ```diff
-@@ -157,3 +157,79 @@ litlog updated tasks/task-2 "added plan step-2"
- git add .
- git commit -m "added task-2 plan step-2"
- ```
-+1. Complete <litlog-link to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link> React component.
-+```bash
-+litlog updating tasks/task-2
-+litlog updating files/src/components/litlog-link.js
-+```
-+   1. Add *to* prop.
-+```javascript
-+const LitlogLink = ({ to }) => {
-+  return (
-+    <span>
-+      {to}
-+    </span>
-+)}
-+```
-+```bash
-+git apply << EOF
-+>--- a/src/components/litlog-link.js
-+>+++ b/src/components/litlog-link.js
-+>@@ -1,10 +1,11 @@
-+> import React from 'react'
-+> import Link from 'gatsby-link'
-+> 
-+>-const LitlogLink = () => (
-+>-  <span>
-+>-    Hello, World!
-+>-  </span>
-+>-)
-+>+const LitlogLink = ({ to }) => {
-+>+  return (
-+>+    <span>
-+>+      {to}
-+>+    </span>
-+>+)}
-+> 
-+> export default LitlogLink
-+EOF
-+litlog updated files/src/components/litlog-link.js "added *to* prop"
-+git add src/components/litlog-link.js
-+git commit -m "added *to* prop"
-+litlog updating files/src/components/litlog-link.js
-+```
-+   1. Make it a Link
-+```javascript
-+const LitlogLink = ({ to, children }) => {
-+  return (
-+    <Link to={to}>
-+      {children}
-+    </Link>
-+)}
-+```
-+```bash
-+git apply << EOF
-+>--- a/src/components/litlog-link.js
-+>+++ b/src/components/litlog-link.js
-+>@@ -1,11 +1,11 @@
-+> import React from 'react'
-+> import Link from 'gatsby-link'
-+> 
-+>-const LitlogLink = ({ to }) => {
-+>+const LitlogLink = ({ to, children }) => {
-+>   return (
-+>-    <span>
-+>-      {to}
-+>-    </span>
-+>+    <Link to={to}>
-+>+      {children}
-+>+    </Link>
-+> )}
-+> 
-+> export default LitlogLink
-+EOF
-+litlog updated files/src/components/litlog-link.js "completed component"
-+litlog updated tasks/task-2 "added step-3"
-+git add .
-+git commit -m "added task-2 plan step-3"
-+```
+>@@ -157,3 +157,79 @@ litlog updated tasks/task-2 "added plan step-2"
+> git add .
+> git commit -m "added task-2 plan step-2"
+> ```
+>+1. Complete <litlog-link >to="/files/src/components/litlog-link.js">litlog-link.js</litlog-link> React component.
+>+```bash
+>+litlog updating tasks/task-2
+>+litlog updating files/src/components/litlog-link.js
+>+```
+>+   1. Add *to* prop.
+>+```javascript
+>+const LitlogLink = ({ to }) => {
+>+  return (
+>+    <span>
+>+      {to}
+>+    </span>
+>+)}
+>+```
+>+```bash
+>+git apply << EOF
+>+>--- a/src/components/litlog-link.js
+>+>+++ b/src/components/litlog-link.js
+>+>@@ -1,10 +1,11 @@
+>+> import React from 'react'
+>+> import Link from 'gatsby-link'
+>+> 
+>+>-const LitlogLink = () => (
+>+>-  <span>
+>+>-    Hello, World!
+>+>-  </span>
+>+>-)
+>+>+const LitlogLink = ({ to }) => {
+>+>+  return (
+>+>+    <span>
+>+>+      {to}
+>+>+    </span>
+>+>+)}
+>+> 
+>+> export default LitlogLink
+>+EOF
+>+litlog updated files/src/components/litlog-link.js "added *to* prop"
+>+git add src/components/litlog-link.js
+>+git commit -m "added *to* prop"
+>+litlog updating files/src/components/litlog-link.js
+>+```
+>+   1. Make it a Link
+>+```javascript
+>+const LitlogLink = ({ to, children }) => {
+>+  return (
+>+    <Link to={to}>
+>+      {children}
+>+    </Link>
+>+)}
+>+```
+>+```bash
+>+git apply << EOF
+>+>--- a/src/components/litlog-link.js
+>+>+++ b/src/components/litlog-link.js
+>+>@@ -1,11 +1,11 @@
+>+> import React from 'react'
+>+> import Link from 'gatsby-link'
+>+> 
+>+>-const LitlogLink = ({ to }) => {
+>+>+const LitlogLink = ({ to, children }) => {
+>+>   return (
+>+>-    <span>
+>+>-      {to}
+>+>-    </span>
+>+>+    <Link to={to}>
+>+>+      {children}
+>+>+    </Link>
+>+> )}
+>+> 
+>+> export default LitlogLink
+>+EOF
+>+litlog updated files/src/components/litlog-link.js "completed component"
+>+litlog updated tasks/task-2 "added step-3"
+>+git add .
+>+git commit -m "added task-2 plan step-3"
+>+```
 ```
