fixed using markdown in titles

--- a/src/pages/litlog/sites/site-3/changes/tasks/task-1/2018-07-04T1908.md
+++ b/src/pages/litlog/sites/site-3/changes/tasks/task-1/2018-07-04T1908.md
@@ -6,7 +6,7 @@ added plan step-1
 ```diff
 @@ -0,0 +1,32 @@
 +---
-+title: "Setup site with content management using [Netlify CMS](https://github.com/netlify/netlify-cms)"
++title: "Setup site with content management using Netlify CMS"
 +date: "2018-07-04"
 +request: "request-1"
 +status: "in-progress"
