--- a/src/pages/litlog/sites/site-3/changes/requests/request-1/2018-07-04T1905.md
+++ b/src/pages/litlog/sites/site-3/changes/requests/request-1/2018-07-04T1905.md
@@ -6,7 +6,7 @@ added spec
 ```diff
 @@ -0,0 +1,8 @@
 +---
-+title: "Setup site with content management using [Netlify CMS](https://github.com/netlify/netlify-cms)"
++title: "Setup site with content management using Netlify CMS"
 +date: "2018-07-04"
 +status: "open"
 +---
